Fixed dark mode button button

--- a/src/components/ButtonToggler/ButtonToggler.modules.scss
+++ b/src/components/ButtonToggler/ButtonToggler.modules.scss
@@ -1,56 +1,58 @@
-.button-container {
-    /* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
 
-    &__switch {
-        position: relative;
-        display: inline-block;
-        width: 2.3rem;
-        height: 1.2rem;
-        /* Hide default HTML checkbox */
-        &__checkbox {
-            opacity: 0;
-            width: 0;
-            height: 0;
-            
-            /* The slider */
-            &__slider-round {
-                position: absolute;
-                cursor: pointer;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                background-color: #ccc;
-                -webkit-transition: .4s;
-                transition: .4s;
-                border-radius: 34px;
+  & > input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
 
-                &::before {
-                    content: "";
-                    height: inherit;
-                    width: 26px;
-                    left: 4px;
-                    bottom: 4px;
-                    background-color: white;
-                    border-radius: 50%;
-                }
-            }
+  & > input:checked + &__slider {
+    background-color: #2196f3;
+  }
 
+  & > input:checked + &__slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
 
-            &:checked + &__slider-round {
-                background-color: #18be7f;
-            }
+  & > input:focus + &__slider {
+    box-shadow: 0 0 1px #2196f3;
+  }
 
-            &:focus + &__slider-round {
-                box-shadow: 0 0 1px #2196F3;
-            }
+  &__slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
 
-            &:checked + &__slider-round::before {
-                -webkit-transform: translateX(26px);
-                -ms-transform: translateX(26px);
-                transform: translateX(26px);
-            }
-        }
-        
+    &:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s;
     }
+
+    &.round {
+      border-radius: 34px;
+
+      &:before {
+        border-radius: 50%;
+      }
+    }
+  }
 }
